--- a/.editorconfig
+++ b/.editorconfig
@@ -3,10 +3,19 @@ root = true
 [*]
 charset = utf-8
 end_of_line = lf
+insert_final_newline = true
+
+[{*.kt,*.kts}]
 tab_width = 4
 indent_size = 4
 indent_style = space
-insert_final_newline = true
-max_line_length = 120
+max_line_length = 100
+ktlint_standard_annotation = disabled
 ktlint_standard_import-ordering = disabled
-trailing-comma-on-call-site = disabled
+ktlint_standard_no-empty-first-line-in-class-body = disabled
+ktlint_standard_multiline-expression-wrapping = disabled
+ktlint_standard_string-template-indent = disabled
+ktlint_standard_function-signature = disabled
+ij_kotlin_code_style_defaults = KOTLIN_OFFICIAL
+ij_kotlin_allow_trailing_comma = false
+ij_kotlin_allow_trailing_comma_on_call_site = false
