--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,10 +27,14 @@
 
         <activity android:name=".ui.main.MainActivity" />
         <activity android:name=".ui.login.LoginActivity" />
-        <activity android:name=".ui.join.BasicInformationActivity"
-            android:windowSoftInputMode="adjustResize"/>
+        <activity
+            android:name=".ui.join.BasicInformationActivity"
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name=".ui.join.JoinCompleteActivity" />
         <activity android:name=".ui.main.storage.region.InsightRegionActivity" />
+        <activity
+            android:name=".ui.write.WriteInsightActivity"
+            android:windowSoftInputMode="adjustResize" />
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
