--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity
             android:name=".ui.write.WriteInsightActivity"
             android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".ui.insight.InsightDetailActivity" />
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
