--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity android:name=".ui.insight.InsightDetailActivity" />
         <activity android:name=".ui.main.home.search.map.SearchByMapActivity" />
         <activity android:name=".ui.main.storage.map.StorageByMapActivity" />
+        <activity android:name=".ui.my.MyActivity" />
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
