--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity android:name=".ui.main.storage.map.StorageByMapActivity" />
         <activity android:name=".ui.my.MyActivity" />
         <activity android:name=".ui.my.term.ServiceTermActivity" />
+        <activity android:name=".ui.my.withdraw.WithdrawActivity" />
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
