--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
             android:name=".ui.write.WriteInsightActivity"
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".ui.insight.InsightDetailActivity" />
+        <activity android:name=".ui.main.home.search.map.SearchByMapActivity" />
+        <activity android:name=".ui.main.storage.map.StorageByMapActivity" />
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
