feat : 인사이트 작성 - 기본정보 화면 기능 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".ui.my.MyActivity" />
         <activity android:name=".ui.my.term.ServiceTermActivity" />
         <activity android:name=".ui.my.withdraw.WithdrawActivity" />
+        <activity android:name=".ui.write.address.KakaoAddressActivity" />
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
