--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,8 +53,12 @@
         <activity android:name=".ui.my.term.ServiceTermActivity" />
         <activity android:name=".ui.my.withdraw.WithdrawActivity" />
         <activity android:name=".ui.write.address.KakaoAddressActivity" />
-        <activity android:name=".ui.write.summary.WriteInsightSummaryActivity" />
-        <activity android:name=".ui.write.review.WriteOverallReviewActivity" />
+        <activity
+            android:name=".ui.write.summary.WriteInsightSummaryActivity"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".ui.write.review.WriteOverallReviewActivity"
+            android:windowSoftInputMode="adjustResize" />
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
