--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
         <activity android:name=".ui.main.home.search.visitcomplex.VisitComplexInsightListActivity" />
         <activity android:name=".ui.main.home.search.newinsight.NewInsightListActivity" />
         <activity android:name=".ui.main.storage.map.StorageByMapActivity" />
+        <activity android:name=".ui.main.home.notification.NotificationActivity" />
         <activity android:name=".ui.my.MyActivity" />
         <activity android:name=".ui.my.term.ServiceTermActivity" />
         <activity android:name=".ui.my.withdraw.WithdrawActivity" />
