feat: 보관함 주소 목록 조회 API 연동

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:name=".ui.join.BasicInformationActivity"
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".ui.join.JoinCompleteActivity" />
-        <activity android:name=".ui.main.storage.region.InsightRegionActivity" />
+        <activity android:name=".ui.main.storage.address.InsightAddressActivity" />
         <activity
             android:name=".ui.write.WriteInsightActivity"
             android:windowSoftInputMode="adjustResize" />
