feat: 지역으로 찾기 화면 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
             android:name=".ui.write.WriteInsightActivity"
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".ui.insight.InsightDetailActivity" />
+        <activity android:name=".ui.main.home.search.region.SearchByRegionActivity" />
         <activity android:name=".ui.main.home.search.map.SearchByMapActivity" />
         <activity android:name=".ui.main.home.search.visitcomplex.VisitComplexInsightListActivity" />
         <activity android:name=".ui.main.home.search.newinsight.NewInsightListActivity" />
