feat : 기본 정보 입력 api 수정 - FCM 토큰 값 추가

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -54,6 +54,7 @@ kakao-login = { group = "com.kakao.sdk", name = "v2-user", version.ref = "kakao"
 firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase" }
 firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics" }
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth" }
+firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging" }
 play-services-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "play-services-auth" }
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
 naver-map = { group = "com.naver.maps", name = "map-sdk", version.ref = "naver-map" }
