feat : My 페이지에서 서비스 소개 클릭시 서비스 소개 화면 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,7 @@
         <activity android:name=".ui.my.term.ServiceTermActivity" />
         <activity android:name=".ui.my.withdraw.WithdrawActivity" />
         <activity android:name=".ui.write.address.KakaoAddressActivity" />
+        <activity android:name=".ui.my.introduction.ServiceIntroductionActivity" />
         <activity
             android:name=".ui.write.summary.WriteInsightSummaryActivity"
             android:windowSoftInputMode="adjustResize" />
